<resources>
    <string name="app_name">CRM-DEMO</string>

    <string name="action_settings">Beállítások</string>
    <string name="title_activity_ugyfel">UgyfelActivity</string>
    <string name="title_activity_new_partner">Új partner felvitele</string>
    <string name="aboutmenutext">Névjegy</string>
    <string name="newpartnermenutext">Új partner felvitele</string>
    <string name="title_activity_new_contact">Új kapcsolat felvitele</string>

    <string name="hello_world">Hello world!</string>
    <string name="newpsnametext">Név</string>
    <string name="pssavebtncaption">Partner mentése</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pssearchnevtext">Partner név:</string>
    <string name="pssearchbycitytext">Település:</string>
    <string name="pssearchbzncaption">Partner keresése</string>
    <string name="title_activity_stat_frag_proba">StatFragProba</string>
    <string name="title_activity_partner_info">PartnerInfoActivity</string>
    <string name="tvPsKod">Partner kód:</string>
    <string name="btnCaptionBack">Vissza</string>
    <string name="sampleemailtext">kapcsolat@kapcsolat.com</string>
    <string name="sampletelefontext">+36555555555</string>
    <string name="nocontacttext">Még nincs rögzítve kapcsolat</string>
    <string name="title_activity_contact_list">Kapcsolatok</string>
    <string name="kapcsolatokbtncaption">Kapcsolatok</string>
    <string name="nevcaptiontext">Név :</string>
</resources>
