<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="110dp">

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/pssearchnevtext"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPsSearchNev"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_weight="1.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/pssearchbycitytext"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPsSearchTelep"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:layout_weight="1.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSearchPs"
        android:text="@string/pssearchbzncaption"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:layout_height="40dp" />

</LinearLayout>